Motion Blur in EEVEE is not blending steps properly for camera motion in newer versions #81752

Closed
opened 2020-10-16 02:41:27 +02:00 by Cycles · 8 comments

System Information
Operating system: Microsoft Windows 10 Pro
Graphics card: Nvidia GeForce GTX 1050
Processor: Intel(R) Core(TM) i5-2500 CPU @ 3.30GHz, 3301 Mhz, 4 Core(s), 4 Logical Processor(s)

Blender Version
Broken: blender-2.92.0-e4728d0a167c-windows64
Worked: New in 2.90, didn't work in older builds of 2.90

Short description of error
When there is very high camera motion blur in EEVEE, a step value greater than 1 introduces noticeable steps which don't get properly blended. There is some post-process blur but not enough to fill the gaps. Changing Max Blur or Background Separation doesn't help.

This bug was previously reported. I thought that the bug got fixed, but in reality time step blur was temporarily not working, making it look like the blending issue was not present. In the newest versions, the bug is now present again.

Exact steps for others to reproduce the error
Start with default blend file
Go to frame 1 and rotate the camera so the default cube is at the left of the screen
Add a keyframe (of rotation)
Go to frame 5 and rotate the camera so the default cube is at the right of the screen
Add another rotation keyframe
Turn on motion blur with steps set to 4
Render a still image at frame 3
Notice stepping artifacts not being blended properly by the post-process motion blur.
motionblurissue.png

**System Information** Operating system: Microsoft Windows 10 Pro Graphics card: Nvidia GeForce GTX 1050 Processor: Intel(R) Core(TM) i5-2500 CPU @ 3.30GHz, 3301 Mhz, 4 Core(s), 4 Logical Processor(s) **Blender Version** Broken: blender-2.92.0-e4728d0a167c-windows64 Worked: New in 2.90, didn't work in older builds of 2.90 **Short description of error** When there is very high camera motion blur in EEVEE, a step value greater than 1 introduces noticeable steps which don't get properly blended. There is some post-process blur but not enough to fill the gaps. Changing Max Blur or Background Separation doesn't help. This bug was previously reported. I thought that the bug got fixed, but in reality time step blur was temporarily not working, making it look like the blending issue was not present. In the newest versions, the bug is now present again. **Exact steps for others to reproduce the error** Start with default blend file Go to frame 1 and rotate the camera so the default cube is at the left of the screen Add a keyframe (of rotation) Go to frame 5 and rotate the camera so the default cube is at the right of the screen Add another rotation keyframe Turn on motion blur with steps set to 4 Render a still image at frame 3 Notice stepping artifacts not being blended properly by the post-process motion blur. ![motionblurissue.png](https://archive.blender.org/developer/F8752571/motionblurissue.png)
Author

Added subscriber: @Cycles

Added subscriber: @Cycles

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I tested it on different versions of 2.90 and got the same result.
What was the subversion of 2.90 that really worked? (you can share the System Info in Help -> Save System Info)

Here the file I used:
eevee_mblur_steps.blend


But compared to the images in the manual , 4 steps apparently should have a smoother transition.
So I'm not sure if the transition with 4 steps shown in the image is really expected. (@fclem?)

I tested it on different versions of 2.90 and got the same result. What was the subversion of 2.90 that really worked? (you can share the System Info in `Help -> Save System Info`) Here the file I used: [eevee_mblur_steps.blend](https://archive.blender.org/developer/F9000405/eevee_mblur_steps.blend) ---- But compared to the images in the [manual ](https://docs.blender.org/manual/en/latest/render/eevee/render_settings/motion_blur.html), 4 steps apparently should have a smoother transition. So I'm not sure if the transition with 4 steps shown in the image is really expected. (@fclem?)
Author

It never actually worked. There was just a version where I couldn't use multiple time steps due to a different bug (https://developer.blender.org/T79646). At first I didn't realize there was a bug, and no time steps meant no blending issues (since there were no steps to blend between) so I thought it was gone. The bug later got fixed (not this blending bug but the time step one) and the blending issues came back. The hash mentioned in the post is a93be410c9. So, even in that version the bug was not fixed. As far as I know, it has been there ever since the new motion blur was added. I hope I am clear.

Additional info: this bug only affects camera motion, if I do the exact same thing but changing location of the cube rather than camera position, it blends fine.

It never actually worked. There was just a version where I couldn't use multiple time steps due to a different bug (https://developer.blender.org/T79646). At first I didn't realize there was a bug, and no time steps meant no blending issues (since there were no steps to blend between) so I thought it was gone. The bug later got fixed (not this blending bug but the time step one) and the blending issues came back. The hash mentioned in the post is a93be410c9. So, even in that version the bug was not fixed. As far as I know, it has been there ever since the new motion blur was added. I hope I am clear. Additional info: this bug only affects camera motion, if I do the exact same thing but changing location of the cube rather than camera position, it blends fine.
Clément Foucault self-assigned this 2020-10-17 20:33:35 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by aae60f0fec

This issue was referenced by aae60f0fecf74c93d8c6e8a5e33ffd4fb6c76a3a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81752
No description provided.